; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/core/extr_rtw_efuse.c_hal_EfusePgPacketWriteData.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/core/extr_rtw_efuse.c_hal_EfusePgPacketWriteData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }
%struct.pgpkt = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.adapter*, i32, i64*, %struct.pgpkt*)* @hal_EfusePgPacketWriteData to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hal_EfusePgPacketWriteData(%struct.adapter* %0, i32 %1, i64* %2, %struct.pgpkt* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.adapter*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64*, align 8
  %9 = alloca %struct.pgpkt*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca i64, align 8
  store %struct.adapter* %0, %struct.adapter** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64* %2, i64** %8, align 8
  store %struct.pgpkt* %3, %struct.pgpkt** %9, align 8
  %13 = load i64*, i64** %8, align 8
  %14 = load i64, i64* %13, align 8
  store i64 %14, i64* %10, align 8
  store i32 0, i32* %11, align 4
  store i64 0, i64* %12, align 8
  store i32 15, i32* %11, align 4
  %15 = load %struct.adapter*, %struct.adapter** %6, align 8
  %16 = load i64, i64* %10, align 8
  %17 = add nsw i64 %16, 1
  %18 = load %struct.pgpkt*, %struct.pgpkt** %9, align 8
  %19 = getelementptr inbounds %struct.pgpkt, %struct.pgpkt* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.pgpkt*, %struct.pgpkt** %9, align 8
  %22 = getelementptr inbounds %struct.pgpkt, %struct.pgpkt* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @Efuse_WordEnableDataWrite(%struct.adapter* %15, i64 %17, i32 %20, i32 %23)
  store i32 %24, i32* %11, align 4
  %25 = load i32, i32* %11, align 4
  %26 = icmp eq i32 %25, 15
  br i1 %26, label %27, label %28

27:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %42

28:                                               ; preds = %4
  %29 = load %struct.adapter*, %struct.adapter** %6, align 8
  %30 = load %struct.pgpkt*, %struct.pgpkt** %9, align 8
  %31 = getelementptr inbounds %struct.pgpkt, %struct.pgpkt* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* %11, align 4
  %34 = load %struct.pgpkt*, %struct.pgpkt** %9, align 8
  %35 = getelementptr inbounds %struct.pgpkt, %struct.pgpkt* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i64 @Efuse_PgPacketWrite(%struct.adapter* %29, i32 %32, i32 %33, i32 %36)
  store i64 %37, i64* %12, align 8
  %38 = load i64, i64* %12, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %41, label %40

40:                                               ; preds = %28
  store i32 0, i32* %5, align 4
  br label %42

41:                                               ; preds = %28
  store i32 1, i32* %5, align 4
  br label %42

42:                                               ; preds = %41, %40, %27
  %43 = load i32, i32* %5, align 4
  ret i32 %43
}

declare dso_local i32 @Efuse_WordEnableDataWrite(%struct.adapter*, i64, i32, i32) #1

declare dso_local i64 @Efuse_PgPacketWrite(%struct.adapter*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
